<resources>
    <string name="app_name">Pastiche</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="my_menu_item">my menu Item!</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="action_refresh">refresh</string>
    <string name="Login_Email">EMAIL OR USERNAME</string>
    <string name="Password">PASSWORD</string>
    <string name="Login">Log In</string>
    <string name="Create_account_msg">No account yet? Create one</string>
    <string name="picture_capture">Capture</string>
    <string name="camera">"This is the camera activity"</string>
    <string name="username">USERNAME</string>
    <string name="signup">Sign Up</string>
    <string name="signup_email">EMAIL</string>
    <string name="signup_password">PASSWORD</string>
    <string name="action_logout">logout</string>
    <string name="default_event">Default Event</string>

    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="item_title">Image</string>
    <string name="default_event_name">Pastiche Event</string>
    <string name="new_event_dialog_title">Add Event</string>
    <string name="enter_event_name">Enter Name</string>
    <string name="action_addEvent">Add Event</string>

</resources>
