<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/magnify"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
            android:id="@+id/action_refresh"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_refresh"/>

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_settings"/>
    <item
            android:id="@+id/action_logout"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_logout"/>

    <item
            android:id="@+id/action_addEvent"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_addEvent"/>
</menu>