<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:background="#333333"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <!-- Logo -->
        <TextView  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="@dimen/login_padding_left_right"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/signup"
                   android:textSize="36sp"
                   android:textColor="@color/white"
                   android:textStyle="normal|bold" android:fontFamily="sans-serif-condensed"
                   android:paddingBottom="@dimen/login_padding_left_right"
        />

        <!--  Username Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <!-- Username field -->
            <EditText android:id="@+id/input_signup_username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/username"
                      android:maxLength="300"
                      android:backgroundTint="@color/colorPrimary"
                      android:backgroundTintMode="src_atop"
            />
        </android.support.design.widget.TextInputLayout>

        <!-- Email title -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <!-- Email field -->
            <EditText android:id="@+id/input_signup_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/signup_email"
                      android:maxLength="60"
                      android:backgroundTint="@color/colorPrimary"
                      android:backgroundTintMode="src_atop"
            />
        </android.support.design.widget.TextInputLayout>

        <!-- Password title -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <!-- password field -->
            <EditText android:id="@+id/input_signup_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/signup_password"
                      android:maxLength="150"
                      android:backgroundTint="@color/colorPrimary"
                      android:backgroundTintMode="src_atop"
                      android:fontFamily="sans-serif"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Create Account"
                android:background="@drawable/ripple_button_background"
        />

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="Already a member? Login"
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>